# trending-on-github

./: .gitignore  README.md  build_dashboard.py  build_markdown.py  dashboard.ipynb  pyproject.toml
.github/workflows/: scrape.yml  test.yml
data/: README.md  daily.md  monthly.md  weekly.md
data/daily/: 2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  (+33 more)
data/monthly/: 2026-05.json  2026-06.json  2026-07.json
data/weekly/: 2026-W20.json  2026-W21.json  2026-W22.json  2026-W23.json  2026-W24.json  2026-W25.json  2026-W26.json  2026-W27.json  2026-W28.json  2026-W29.json  2026-W30.json
docs/superpowers/plans/: 2026-05-13-trending-collector.md  2026-05-14-markdown-counterparts.md
src/trending/: __main__.py  fetch.py  parse.py  period.py  snapshot.py
tests/: test_dashboard.py  test_fetch.py  test_markdown.py  test_parse.py  test_period.py  test_snapshot.py
tests/fixtures/: trending_daily.html  trending_monthly.html  trending_weekly.html
(+2 files in other folders)
